<resources>
    <string name="app_name">Speakable</string>
    <string name="process_text_action_name">Speakable</string>
    <string name="tts_text">This is a demo of Microsoft Cognitive Services Text to Speech API.</string>
    <string name="play_button_name">Play</string>
    <string name="stop_button_name">Stop</string>
    <string name="startBubble_button_name">Overlay mode</string>
    <string name="no_entry">No entry</string>
    <string name="close_notification">Close</string>
    <string name="main">Text to speech</string>
    <string name="saved">Saved words</string>
    <string name="import_text">Import text</string>
    <string name="settings">Settings</string>
    <string name="create_backup_file">Create backup file</string>
    <string name="restore_from_backup">Restore from file</string>
    <string name="restore_backup_dialog_title">Do you want to restore data from a backup?</string>
    <string name="restore_backup_dialog_message">This will override your current data.</string>
    <string name="dialog_new_word_title">New word</string>
    <string name="word_edit_text">Word</string>
    <string name="language_edit_text">Language</string>
    <string name="translation_edit_text">Translation</string>
    <string name="notes_edit_text">Notes</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note">Note</string>
    <string name="saved_word">Saved word</string>
    <string name="play_tts_icon_description">Play TTS</string>
    <string name="edit_icon_description">Edit</string>
    <string name="save_icon_description">Save word</string>
    <string name="definition_label">Definition</string>
    <string name="notes_label">Notes</string>
    <string name="notes_item_label">Notes: %1$s</string>
    <string name="tts_edit_text_hint">Enter text to reproduce</string>
    <string name="paste_icon_description">Paste</string>
    <string name="browse_icon_description">Browse</string>
    <string name="reader_icon_description">Reader</string>
    <string name="clipboard_btn_caption">Clipboard Mode</string>
    <string name="powered_by_google_label">Powered by Google Translate</string>
    <string name="bubble_view_description">Floating icon</string>
    <string name="reproduce_description">Reproduce</string>
    <string name="translate_description">Translate</string>
    <string name="screenshot_description">Screenshot</string>
    <string name="copy_definition_btn_description">Copy to clipboard</string>
    <string name="translation_label">Translation</string>
    <string name="copy_translation_btn_description">Copy translation to clipboard</string>
    <string name="clipboard_shortcut_short_label">Clipboard</string>
    <string name="clipboard_shortcut_long_label">Activate clipboard mode</string>
    <string name="clipboard_shortcut_disabled_message">Clipboard mode unavailable</string>
    <string name="overlay_shortcut_short_label">Overlay</string>
    <string name="overlay_shortcut_long_label">Activate overlay mode</string>
    <string name="overlay_shortcut_disabled_message">Overlay mode unavailable</string>
    <string name="from_label">From:</string>
    <string name="to_label">To:</string>
    <string name="small_label">Small</string>
    <string name="large_label">Large</string>
    <string name="import_text_hint">Enter text to import</string>
    <string name="visualize_label">Visualizer</string>
    <string name="reader_current_page_label">%1$d / %2$d</string>
    <string name="reader_current_chapter_label">Chapter: %1$d of %2$d</string>
    <string name="table_of_contents">Table of contents</string>
    <string name="brightness_settings">Brightness settings</string>
    <string name="recent_files_label">Recently opened files</string>
    <string name="error_translation">Error when translating</string>
    <string name="error">Error</string>
    <string name="split_page_setting">Split page</string>
    <string name="page_setting">Page mode</string>
    <string name="translation_not_found">No translation found.</string>
    <string name="single_page_setting">Single page</string>
    <string name="click_to_translate_msg">Page not translated yet. Click button to translate</string>
    <string name="search">Search</string>
    <string name="no_file_read_permission">Read storage permission is necessary to load images</string>
    <string name="more_options">More options</string>
    <string name="cover_image">Cover image</string>
    <string name="delete">Delete</string>
    <string name="delete_word_message">Do you want to delete this word?</string>
    <string name="auto_detect">AUTO DETECT</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="toggle">Toggle</string>
    <string name="expand">expand</string>
    <string name="paragraph_not_translated">Paragraph not translated yet, click button to translate and enable bottom panel</string>
    <string name="swipe_to_hide">Swipe to hide</string>
    <string name="app_version">Version: %s</string>
    <string name="about">About</string>
    <string name="import_tab_layout">Import tab layout</string>
    <string name="add">Add</string>
    <string name="unknown_language">Unknown</string>
    <string name="tab_layout_description">Page indicator</string>
    <string name="overlay_notification_permission_rationale">Notifications make the experience better by allowing you to easily show and close the floating icon</string>
    <string name="clipboard_notification_title">Clipboard translation is activated</string>
    <string name="notification_title">Speakable overlay</string>
    <string name="notification_text">Tap to start text recognition</string>
    <string name="notification_text_short">Tap to start</string>
    <string name="no_words_saved">No words found</string>
    <string name="language_to">Language to</string>
    <string name="white_theme">White theme</string>
    <string name="beige_theme">Beige theme</string>
    <string name="black_theme">Black theme</string>
    <string name="single_page">Single page</string>
    <string name="split_page">Split page</string>
    <string name="translate_to_label">Translate to</string>
</resources>