<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?textInfoDialogBG">

    <Spinner
        android:id="@+id/translate_to_spinner"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/language_to"
        android:minHeight="32dp"
        android:spinnerMode="dialog"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/translation_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/translation_label"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/translate_to_spinner" />

    <TextView
        android:id="@+id/translation_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintEnd_toStartOf="@id/copy_translation_button"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/translation_label"
        tools:text="Translation from external service" />

    <ImageButton
        android:id="@+id/copy_translation_button"
        style="@style/SelectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/copy_translation_btn_description"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_content_copy_black_24dp"
        android:tint="?colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@+id/translation_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/translation_label" />

    <TextView
        android:id="@+id/saved_definition_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="15"
        android:text="@string/definition_label"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        app:layout_constraintEnd_toEndOf="@+id/saved_definition_text"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/translation_text" />

    <TextView
        android:id="@+id/saved_definition_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="15"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintEnd_toStartOf="@+id/copy_definition_button"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/saved_definition_label"
        tools:text="Definition saved previously by the user" />

    <TextView
        android:id="@+id/saved_notes_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="15"
        android:text="@string/notes_label"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/saved_definition_text" />

    <TextView
        android:id="@+id/saved_notes_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLines="15"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/saved_notes_label"
        tools:text="Additional notes previously saved by the user" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />


    <ImageButton
        android:id="@+id/copy_definition_button"
        style="@style/SelectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/copy_definition_btn_description"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_content_copy_black_24dp"
        android:tint="?colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@+id/saved_definition_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/saved_definition_label" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/all_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="translation_label,translate_to_spinner,translation_text,copy_translation_button,saved_definition_label,copy_definition_button,saved_definition_text,saved_notes_label,saved_notes_text"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/translation_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="translation_label,translate_to_spinner,translation_text,copy_translation_button"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/definition_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="saved_definition_label,copy_definition_button,saved_definition_text" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/notes_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="saved_notes_label,saved_notes_text"/>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/error"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_error_outline_black_24dp"
            app:tint="?colorOnSurface" />

        <TextView
            android:text="@string/error_translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
            android:id="@+id/powered_by_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/powered_by_google_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saved_notes_text" />

</androidx.constraintlayout.widget.ConstraintLayout>