<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    app:cardBackgroundColor="?colorBackgroundFloating">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/white_bg_btn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#ffff"
            android:contentDescription="@string/white_theme"
            app:layout_constraintEnd_toStartOf="@+id/beige_bg_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_language_to"
            app:strokeColor="#484848"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/beige_bg_btn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/beige"
            android:contentDescription="@string/beige_theme"
            app:layout_constraintBaseline_toBaselineOf="@+id/white_bg_btn"
            app:layout_constraintEnd_toStartOf="@+id/black_bg_btn"
            app:layout_constraintStart_toEndOf="@+id/white_bg_btn"
            app:strokeColor="#484848"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/black_bg_btn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#000"
            android:contentDescription="@string/black_theme"
            app:layout_constraintBaseline_toBaselineOf="@+id/beige_bg_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/beige_bg_btn"
            app:strokeColor="#484848"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/page_setting"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintBottom_toBottomOf="@+id/page_toggle_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/page_toggle_container" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/page_toggle_container"
            style="@style/Widget.Material3.MaterialButtonToggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/beige_bg_btn"
            app:selectionRequired="true"
            app:singleSelection="true"
            tools:checkedButton="@id/single_page_btn">

            <Button
                android:id="@+id/single_page_btn"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/single_page"
                app:icon="@drawable/ic_rect" />

            <Button
                android:id="@+id/split_page_btn"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/split_page"
                app:icon="@drawable/ic_setting_split" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Spinner
            android:id="@+id/spinner_language_from"
            style="@android:style/Widget.Material.Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/book_lang_text"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorOnSurface"
            app:layout_constraintTop_toBottomOf="@id/spinner_language_from" />

        <Spinner
            android:id="@+id/spinner_language_to"
            style="@android:style/Widget.Material.Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/translate_to_label"
            app:layout_constraintTop_toBottomOf="@+id/spinner_language_from"
            tools:listitem="@android:layout/simple_spinner_item" />

        <TextView
            android:id="@+id/translate_to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate_to_label"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_language_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner_language_to" />

        <TextView
            android:id="@+id/book_lang_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_language_label"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_language_from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner_language_from" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>